# em2rs-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: async_example.rs  multiple_motors.rs  sync_example.rs
src/: client.rs  lib.rs  registers.rs  sync.rs  types.rs
